# mr-robot

./: DME.txt  PlotHeightMap.m
CylinderDetection/: CMakeLists.txt  package.xml
CylinderDetection/launch/: fpr.launch
CylinderDetection/src/: CylinderDetection.cpp
cylinder_detection/: CMakeLists.txt  package.xml
cylinder_detection/launch/: fpr.launch
cylinder_detection/src/: CylinderDetection.cpp
floor_plane_mapping-Debug@floor_plane_mapping/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  setup_eclipse.sh
floor_plane_mapping-Debug@floor_plane_mapping/catkin_generated/: env_cached.sh  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
floor_plane_mapping-Debug@floor_plane_mapping/catkin_generated/installspace/: floor_plane_mapping.pc  floor_plane_mappingConfig.cmake  floor_plane_ransac.pc  floor_plane_ransacConfig.cmake
floor_plane_mapping-Debug@floor_plane_mapping/catkin_generated/stamps/floor_plane_mapping/: package.xml.stamp
floor_plane_mapping-Debug@floor_plane_mapping/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
floor_plane_mapping-Debug@floor_plane_mapping/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
floor_plane_mapping-Debug@floor_plane_mapping/devel/lib/floor_plane_ransac/: floor_plane_ransac
floor_plane_mapping-Debug@floor_plane_mapping/devel/lib/pkgconfig/: floor_plane_mapping.pc  floor_plane_ransac.pc
floor_plane_mapping-Debug@floor_plane_mapping/devel/share/floor_plane_mapping/cmake/: floor_plane_mappingConfig.cmake
floor_plane_mapping-Debug@floor_plane_mapping/devel/share/floor_plane_ransac/cmake/: floor_plane_ransacConfig.cmake
floor_plane_mapping-Debug@floor_plane_mapping/gtest/: CTestTestfile.cmake  Makefile
floor_plane_mapping-Debug@floor_plane_mapping/launch/: fpr.launch  fpr.launch~
floor_plane_mapping-Debug@floor_plane_mapping/src/: Cartography.cpp  Cartography.h  Cell.cpp  Cell.h  CylinderDetection.cpp  floor_plane_mapping.cpp  floor_plane_ransac.cpp~  mapping.h
kf_lab/: CMakeLists.txt  package.xml
kf_lab/launch/: demo.launch  demo.launch~
kf_lab/src/: kf_example_sub.py  kf_example_tf.py
noisy_tf/: CMakeLists.txt  package.xml
noisy_tf/launch/: noisy_tf.launch  noisy_tf.launch~
noisy_tf/src/: noisy_tf.py
occupancy_mapping/: CMakeLists.txt  package.xml
occupancy_mapping/launch/: fpr.launch  fpr.launch~
occupancy_mapping/src/: Cartography.cpp  Cartography.h  Cell.cpp  DEM.cpp  DEM.h  DME.cpp  DME.h  occupancy_mapping.cpp
particle_filter_base/: CMakeLists.txt  package.xml
particle_filter_base/include/particle_filter_base/: Function.h
particle_filter_base/launch/: demo.launch
particle_filter_base/src/: DEM.cpp  DEM.h  Function.cpp  ParticleFilter.cpp
svm/src/: CMakeLists.txt  RSVM.cpp  RSVM.hpp  SVM.cpp
vsv_stack/: README.md
vsv_stack/bsplines/: CMakeLists.txt  mainpage.dox  manifest.xml
vsv_stack/bsplines/include/bsplines/: BSpline.h  Function.h  SplinePath.h  SplineRegister.h
vsv_stack/bsplines/src/: BSpline.cpp  Function.cpp  SplinePath.cpp  SplineRegister.cpp
vsv_stack/bsplines/test/: function.cpp  optimsp.cpp  test.cpp  testsp.cpp  travmaps.cpp
vsv_stack/cgnuplot/: CMakeLists.txt
vsv_stack/line_tracking/: CMakeLists.txt  package.xml
vsv_stack/line_tracking/launch/: fpr.launch  fpr.launch~
vsv_stack/line_tracking/src/: line_tracking.cpp  line_tracking.cpp~
vsv_stack/mine_detector/: CMakeLists.txt  package.xml
vsv_stack/mine_detector/launch/: fpr.launch  fpr.launch~
vsv_stack/mine_detector/src/: MineDetector.cpp  ObstacleDetector.cpp
vsv_stack/roadside_mapper/: CMakeLists.txt  manifest.xml
vsv_stack/roadside_mapper/launch/: projector_only.launch  projector_only.launch~
vsv_stack/roadside_mapper/nodes/: .floor_projector.py.swp  floor_projector.py  floor_projector.py~
vsv_stack/vrep_vsv_driver/: manifest.xml
vsv_stack/vrep_vsv_driver/launch/: vsv_geom.launch
vsv_stack/vrep_vsv_driver/nodes/: teleop_base.py  teleop_base.py~  teleop_geom.py  teleop_ik.py  teleop_raw.py  vsv_arm.py  vsv_arm_ik.py  vsv_driver.py  vsv_odom.py
